2002-12-02  Gary Thomas  <gthomas@ecoscentric.com>

	* include/plf_intr.h: Use MPC8xx variant RESET support.

2002-11-26  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal_powerpc_viper.cdl: Move platform define to platform package.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* src/viper.S: Minor include file cleanups.
	* cdl/hal_powerpc_viper.cdl: Update port layout CDL.

2002-10-18  Gary Thomas  <gthomas@ecoscentric.com>

	* include/plf_cache.h: No need for old FLASH cache support.

	* src/hal_diag.c: 
	* include/hal_diag.h: Remove old !VIRTUAL_VECTOR cruft.

2002-09-02  Gary Thomas  <gthomas@ecoscentric.com>

	* cdl/hal_powerpc_viper.cdl: Fix descriptions for serial ports 
	since both SMC1 and SCC1 are now supported.

2002-08-02  Andrew Lunn <Andrew.Lunn@ascom.ch>

	* cdl/hal_powerpc_viper.cdl: the RedBoot exec command can now 
	  be disabled by CDL
	
2002-07-31  Gary Thomas  <gary@chez-thomas.org>

	* misc/redboot_ROMRAM.ecm: 
	* cdl/hal_powerpc_viper.cdl: Default board speed is now 63MHz.

2002-07-24  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: 
	* cdl/hal_powerpc_viper.cdl: More choices for system clock.

2002-07-22  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: 
	* cdl/hal_powerpc_viper.cdl: 
	Support choices of 47.9, 51.6 MHz for the system clock.

2002-07-18  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: Increase power-up delay before starting SDRAM.

2002-07-11  Gary Thomas  <gary@chez-thomas.org>

	* cdl/hal_powerpc_viper.cdl: Add SCC1 as a serial console port.

2002-06-27  Gary Thomas  <gary@chez-thomas.org>

	* include/plf_regs.h: New file - platform overrides.

2002-06-25  Gary Thomas  <gary@chez-thomas.org>

	* src/redboot_linux_exec.c:
	* cdl/hal_powerpc_viper.cdl: Add Linux boot (exec) command.

2002-06-24  Gary Thomas  <gary@chez-thomas.org>

	* misc/redboot_ROMRAM.ecm: Update for new FLASH chips.

2002-06-20  Gary Thomas  <gary@chez-thomas.org>

	* src/viper.S: 
	* src/hal_aux.c: Support up to 8M of FLASH space.
