@@ -94,7 +94,7 @@ cdl_package CYGPKG_HAL_POWERPC_VIPER {
     cdl_option CYGHWR_HAL_POWERPC_BOARD_SPEED {
         display          "Development board clock speed (MHz)"
         flavor           data
-        legal_values     { 47 51 55 59 63 }
+        legal_values     { 47 51 55 59 63 100 }
         default_value    63
         description      "
            VIPER Development Boards have various system clock speeds
